--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -2,3 +2,11 @@
 .homeTable.ant-table-wrapper{
 	zoom: 0.5;
 }
+.homeTable .rt-tbody {
+	font-size: 9px;	
+}
+.homeTable .-header {
+	font-size: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px; 
+}
